k8s-openldap-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openldap
spec:
  selector:
    matchLabels:
      app: openldap
  serviceName: openldap-service
  replicas: 1
  template:
    metadata:
      labels:
        app: openldap
    spec:
      containers:
        - name: openldap
          image: docker.io/osixia/openldap:1.5.0
          ports:
          - containerPort: 389
            name: ldap
          volumeMounts:
            - mountPath: /seed
              name: seed-data
      volumes:
        - name: seed-data
          configMap:
            name: seed-data.ldif
