k8s-ldap-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: ldap-loadbalancer
spec:
  selector:
    app: openldap
  type: LoadBalancer
  ports:
    - port: 389
      targetPort: 389
